deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world
  labels:
    app: go-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-hello-world
  template:
    metadata:
      labels:
        app: go-hello-world
    spec:
      containers:
        - name: go-hello-world
          image: yrgat/go-argocd-test:latest
          ports:
            - containerPort: 4000
