service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-argocd-test
  namespace: argocd-test
spec:
  selector:
    app: go-hello-world  # Deployment metadata.labels altında app olarak tanımlanan değerle aynı olmalı
  ports:
    - protocol: TCP
      port: 80    # Servisin expose edeceği port
      targetPort: 4000  # Container içindeki port (Deployment'ta hangi port açıldıysa)
  type: ClusterIP
